latest changes to plotting routines -- add vmax vpeak

--- a/examples/1 - data_selection.ipynb
+++ b/examples/1 - data_selection.ipynb
@@ -227,7 +227,8 @@
     "axs[5].set_xlabel(r'$\\log_{10}\\mathrm{M_{bound}}$ $\\mathrm{[M_\\odot]}$')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig(\"./figures/hist_mbound.png\", dpi=300, transparent=True)"
    ]
   },
   {
@@ -310,7 +311,8 @@
     "axs[5].set_xlabel(r'$\\log_{10}\\mathrm{M_{peak}}$ $\\mathrm{[M_\\odot]}$')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig(\"./figures/hist_mpeak.png\", dpi=300, transparent=True)"
    ]
   },
   {
@@ -393,7 +395,8 @@
     "axs[5].set_xlabel(r'$r_{{p}}\\ [\\mathrm{kpc}]$')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig(\"./figures/hist_pericenter.png\", dpi=300, transparent=True)"
    ]
   },
   {
@@ -421,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
