--- a/examples/3 - density_fit.ipynb
+++ b/examples/3 - density_fit.ipynb
@@ -110,12 +110,240 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "596d925c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=======\n",
+      "4.805537441725376 6.459290965067583\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:19<00:00, 258.91it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.4 minutes\n",
+      "Mean autocorrelation time: 59.706 steps\n",
+      "=======\n",
+      "0.5885788084791207 7.1597604417168\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:31<00:00, 54.85it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.6 minutes\n",
+      "Mean autocorrelation time: 31.245 steps\n",
+      "=======\n",
+      "5.0959758415130585 6.496147113226815\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:18<00:00, 277.01it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.3 minutes\n",
+      "Mean autocorrelation time: 52.147 steps\n",
+      "=======\n",
+      "0.613801972433569 7.208969254438565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:30<00:00, 55.41it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.5 minutes\n",
+      "Mean autocorrelation time: 35.008 steps\n",
+      "=======\n",
+      "1421.3389301235004 4.110568952733178\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5000 [00:00<?, ?it/s]/Users/n.anaumonteluva.nl/opt/anaconda3/envs/tangoconda/lib/python3.9/site-packages/emcee/moves/red_blue.py:99: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  lnpdiff = f + nlp - state.log_prob[j]\n",
+      "100%|██████████| 5000/5000 [00:11<00:00, 423.85it/s]\n",
+      "/Users/n.anaumonteluva.nl/opt/anaconda3/envs/tangoconda/lib/python3.9/site-packages/emcee/autocorr.py:38: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  acf /= acf[0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.2 minutes\n",
+      "Mean autocorrelation time: nan steps\n",
+      "=======\n",
+      "1.0077357194239653 7.2960524738976655\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:24<00:00, 59.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.4 minutes\n",
+      "Mean autocorrelation time: 32.720 steps\n",
+      "=======\n",
+      "5.906580138754404 6.370694316734031\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [00:18<00:00, 263.87it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.4 minutes\n",
+      "Mean autocorrelation time: 50.883 steps\n",
+      "=======\n",
+      "0.633920366693153 7.160639514938389\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:20<00:00, 62.44it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.4 minutes\n",
+      "Mean autocorrelation time: 33.449 steps\n",
+      "=======\n",
+      "8.892124197692212 6.59876486472855\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/n.anaumonteluva.nl/VSCode/TangoSIDM/TangoSIDM_satellites/examples/density_fit_utils.py:134: RuntimeWarning: invalid value encountered in log10\n",
+      "  yrange = np.log10(sol)\n",
+      "100%|██████████| 5000/5000 [00:16<00:00, 295.75it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.3 minutes\n",
+      "Mean autocorrelation time: 43.344 steps\n",
+      "=======\n",
+      "0.7113205191517918 7.57327922911643\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:28<00:00, 56.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.5 minutes\n",
+      "Mean autocorrelation time: 31.944 steps\n",
+      "=======\n",
+      "22.771069973503096 6.052252097198443\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/5000 [00:00<?, ?it/s]/Users/n.anaumonteluva.nl/opt/anaconda3/envs/tangoconda/lib/python3.9/site-packages/emcee/moves/red_blue.py:99: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  lnpdiff = f + nlp - state.log_prob[j]\n",
+      "100%|██████████| 5000/5000 [00:10<00:00, 476.91it/s]\n",
+      "/Users/n.anaumonteluva.nl/opt/anaconda3/envs/tangoconda/lib/python3.9/site-packages/emcee/autocorr.py:38: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  acf /= acf[0]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 0.2 minutes\n",
+      "Mean autocorrelation time: nan steps\n",
+      "=======\n",
+      "0.8465123048520404 7.4465163654674065\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5000/5000 [01:28<00:00, 56.65it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiprocessing took 1.5 minutes\n",
+      "Mean autocorrelation time: 31.696 steps\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "sampler_iso, r0_iso, rho0_iso = [], [], []\n",
     "sampler_nfw, r0_nfw, rho0_nfw = [], [], []\n",
@@ -308,7 +536,7 @@
     "axs0[0].set_yticks([1e5, 1e7, 1e9])\n",
     "axs0[0].set_ylabel(r\"$\\rho(r) \\ [\\mathrm{M_\\odot kpc^3}]$\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "fig.savefig(\"./figures/mcmc_fit_base.png\", dpi=300, transparent=True)"
    ]
   },
   {
