slight changes to nb

--- a/examples/0 - TangoSIDM_data.ipynb
+++ b/examples/0 - TangoSIDM_data.ipynb
@@ -279,6 +279,7 @@
     "- `rotation_at_fiducial_radius`: the circular velocity in units of km/s at the fiducial radius (`fiducial_radius_rotation`).\n",
     "- `nfw_fit`: $[r_s, \\rho_s]$ parameters of the NFW profile from MCMC fit.\n",
     "- `iso_fit`: $[r_0, \\rho_0]$ parameters of the isothermal profile from MCMC fit.\n",
+    "- `core_nfw_fit`: $[\\log_{10}M_{200}, r_c, n]$ parameters of the core NFW profile from MCMC fit.\n",
     "\n",
     "**NOTE**: see notebook `3 - density_fit.ipynb` to learn how to fit density profiles with NFW and isothermal profiles."
    ]
@@ -294,13 +295,13 @@
      "output_type": "stream",
      "text": [
       "<KeysViewHDF5 ['centered_radial_bins', 'centered_rotation_radial_bins', 'dm_density', 'dm_rotation', 'dm_velocity']>\n",
-      "<KeysViewHDF5 ['centered_radial_bins', 'centered_rotation_radial_bins', 'density_at_radius', 'dm_density', 'dm_rotation', 'dm_velocity', 'fiducial_radius_rotation', 'iso_fit', 'nfw_fit', 'radius_density', 'radius_rotation', 'rotation_at_fiducial_radius', 'rotation_at_radius']>\n"
+      "<KeysViewHDF5 ['centered_radial_bins', 'centered_rotation_radial_bins', 'core_nfw_fit', 'density_at_radius', 'dm_density', 'dm_rotation', 'dm_velocity', 'fiducial_radius_rotation', 'iso_fit', 'nfw_fit', 'radius_density', 'radius_rotation', 'rotation_at_fiducial_radius', 'rotation_at_radius']>\n"
      ]
     }
    ],
    "source": [
     "with h5py.File(DATA_PATH+f\"SigmaConstant00.hdf5\", \"r\") as file:\n",
-    "    # Halo data for host halo\n",
+    "    # Halo data for host halo   \n",
     "    print(file['20']['halo_data'].keys())\n",
     "    # Halo data for satellite halo\n",
     "    print(file['261763']['halo_data'].keys())"
