--- a/examples/3 - density_fit.ipynb
+++ b/examples/3 - density_fit.ipynb
@@ -19,7 +19,7 @@
     "import numpy as np\n",
     "import h5py\n",
     "from scipy.optimize import minimize\n",
-    "from density_fit_utils import *\n",
+    "from density_profile_fit_utils import *\n",
     "import matplotlib"
    ]
   },
