Including new cells for analysis and plots

--- a/examples/13 - density_pericenter_simulations.ipynb
+++ b/examples/13 - density_pericenter_simulations.ipynb
@@ -632,7 +632,121 @@
    "id": "d4e62529-7714-45ef-83b4-2a1533223eaf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "cmap = matplotlib.cm.RdYlBu\n",
+    "normalize = matplotlib.colors.TwoSlopeNorm(vmin=9, vcenter=9.4, vmax=10.5)\n",
+    "\n",
+    "plt.figure()\n",
+    "fig, all_axs = plt.subplots(2, 3, sharex=True)\n",
+    "all_axs = all_axs.flatten()\n",
+    "\n",
+    "for i, (id, id_name) in enumerate(IDs.items()):\n",
+    "    file = h5py.File(DATA_PATH+f\"{id}.hdf5\", \"a\")\n",
+    "\n",
+    "    axs = all_axs[i]\n",
+    "        \n",
+    "    q = []\n",
+    "    m = []\n",
+    "    # Add simulations points\n",
+    "    for idx in file.keys():\n",
+    "\n",
+    "        if file[f'{idx}'].attrs.get(\"main_halo_of\") is not None:   \n",
+    "            subhalo_idxs = file[f'{idx}'].attrs.get(\"main_halo_of\")\n",
+    "\n",
+    "            rp, rho150, M200 = [], [], []\n",
+    "            # Get satellites of MW halo\n",
+    "            for subhalo_idx in subhalo_idxs:\n",
+    "                data_subhalo = file[f'{subhalo_idx}']\n",
+    "\n",
+    "                # Get pericenter\n",
+    "                _rp = data_subhalo[\"tree_data\"][\"pericenter\"][1]\n",
+    "                _rp = _rp[0] if _rp.shape==(1,) else _rp\n",
+    "                rp = np.append(rp, _rp)\n",
+    "\n",
+    "                nfw_fit = data_subhalo['halo_data']['nfw_fit']\n",
+    "                r_s, log10_rho_s, sigma_r_s, sigma_log10_rho_s = nfw_fit\n",
+    "                rho_s = 10**log10_rho_s\n",
+    "                _rho_150 = NFW_profile(np.array([0.15]), rho_s, r_s)\n",
+    "                rho150 = np.append(rho150, _rho_150[0])\n",
+    "\n",
+    "                z_accr_type_idx, accretion = data_subhalo['tree_data']['accretion']\n",
+    "                mass_peak = data_subhalo['tree_data']['bound_mass_dm'][int(z_accr_type_idx)]                \n",
+    "                M200 = np.append(M200, mass_peak)\n",
+    "    \n",
+    "                # sigma_rho_s = sigma_log10_rho_s * np.log(10) * rho_s\n",
+    "                # rho = NFW_profile(r_range, rho_s, r_s)\n",
+    "                # mass_within_r = mass(rho, r_range)\n",
+    "                # rho_within_r = rho_mean(mass_within_r, r_range)\n",
+    "                # R200 = calculate_R200(rho_within_r, r_range)\n",
+    "                # _M200 = calculate_M200(R200)\n",
+    "                # M200 = np.append(M200, _M200)\n",
+    "\n",
+    "            im = axs.scatter(rp, rho150, c=np.log10(M200), cmap=cmap, marker='.', \n",
+    "                             lw=0, norm=normalize, alpha=1, s=70)\n",
+    "\n",
+    "            # Fit\n",
+    "            select = np.arange(0,8)            \n",
+    "            _q, _m = run_best_fit_for_sim(rp[select], rho150[select])\n",
+    "            q = np.append(q, _q)\n",
+    "            m = np.append(m, _m)\n",
+    "    \n",
+    "\n",
+    "    xrange = np.arange(1, 3.2, 0.2)\n",
+    "    num_range = len(xrange)\n",
+    "    yrange = np.ones((2,num_range))\n",
+    "    \n",
+    "    for k in range(num_range):\n",
+    "        yrange[0, k] = np.percentile(1e7 * 10 ** log_model(xrange[k], q, m), 16)\n",
+    "        yrange[1, k] = np.percentile(1e7 * 10 ** log_model(xrange[k], q, m), 84)\n",
+    "\n",
+    "    axs.fill_between(10 ** xrange, yrange[0,:], yrange[1,:], color='black', alpha=0.15)\n",
+    "    axs.plot(10 ** xrange, 1e7 * 10 ** log_model(xrange, np.median(q), np.median(m)), '-', lw=4, color='white')\n",
+    "    axs.plot(10 ** xrange, 1e7 * 10 ** log_model(xrange, np.median(q), np.median(m)), '-', lw=1.5, color='black')\n",
+    "\n",
+    "    props = dict(boxstyle='round', fc='white', ec='black', alpha=1)\n",
+    "    axs.text(0.05, 0.15, id_name, transform=axs.transAxes, fontsize=15, verticalalignment='top', bbox=props, zorder=1000)\n",
+    "        \n",
+    "    axs.axis([10, 500, 2e6, 2e9])\n",
+    "    axs.set_xscale('log')\n",
+    "    axs.set_yscale('log')\n",
+    "\n",
+    "    xticks = np.array([10, 40, 100, 300])\n",
+    "    labels = [\"10\",\"40\", \"100\",\"300\"]\n",
+    "    axs.set_xticks(xticks, labels)\n",
+    "    \n",
+    "    if i >= 3:\n",
+    "        axs.set_xlabel(r\"$r_{p}$ [kpc]\")\n",
+    "    else:\n",
+    "        axs.get_xaxis().set_ticklabels([])\n",
+    "        \n",
+    "    if (i == 0) or (i==3):\n",
+    "        axs.set_ylabel(r\"$\\rho_{\\mathrm{150pc}}$ [M$_{\\odot}$ kpc$^{-3}$]\")\n",
+    "    else:\n",
+    "        axs.get_yaxis().set_ticklabels([])\n",
+    "\n",
+    "    ####\n",
+    "    file.close()\n",
+    "\n",
+    "####\n",
+    "axs = all_axs[5]\n",
+    "plot_obs(axs)\n",
+    "xticks = np.array([10, 40, 100, 300])\n",
+    "labels = [\"10\",\"40\",\"100\",\"300\"]\n",
+    "plt.xticks(xticks, labels)\n",
+    "axs.get_yaxis().set_ticklabels([])\n",
+    "\n",
+    "\n",
+    "####\n",
+    "# Let's add a colorbar\n",
+    "cbar = plt.colorbar(im, ax=all_axs.ravel().tolist(), label='$\\log_{10}\\mathrm{M_{\\mathrm{peak}}}$ $\\mathrm{[M_\\odot]}$',\n",
+    "                    aspect=40, fraction=0.02, pad=0.01)\n",
+    "cbar.ax.set_yticks([9, 9.3, 9.5, 10, 10.5]) \n",
+    "\n",
+    "\n",
+    "####\n",
+    "plt.savefig('Density_pericenter_Mpeak.png',dpi=300)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
