--- a/examples/14 - density_pericenter_slope.ipynb
+++ b/examples/14 - density_pericenter_slope.ipynb
@@ -320,6 +320,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "c1dbb2b9-92cc-427b-921d-87905f1d179b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Perform bootstrap sampling ...\n",
+    "num_samples = 1000000\n",
+    "\n",
+    "for i, (id, id_name) in enumerate(IDs.items()):\n",
+    "    file = h5py.File(DATA_PATH+f\"{id}.hdf5\", \"a\")\n",
+    "\n",
+    "    q = []\n",
+    "    m = []\n",
+    "    # Add simulations points\n",
+    "    for idx in file.keys():\n",
+    "\n",
+    "        if file[f'{idx}'].attrs.get(\"main_halo_of\") is not None:   \n",
+    "            subhalo_idxs = file[f'{idx}'].attrs.get(\"main_halo_of\")\n",
+    "\n",
+    "            rp, rho150, M200 = [], [], []\n",
+    "            # Get satellites of MW halo\n",
+    "            for subhalo_idx in subhalo_idxs[:8]:\n",
+    "                data_subhalo = file[f'{subhalo_idx}']\n",
+    "\n",
+    "                # Get pericenter\n",
+    "                _rp = data_subhalo[\"tree_data\"][\"pericenter\"][1]\n",
+    "                _rp = _rp[0] if _rp.shape==(1,) else _rp\n",
+    "                rp = np.append(rp, _rp)\n",
+    "\n",
+    "                nfw_fit = data_subhalo['halo_data']['nfw_fit']\n",
+    "                r_s, log10_rho_s, sigma_r_s, sigma_log10_rho_s = nfw_fit\n",
+    "                rho_s = 10**log10_rho_s\n",
+    "                _rho_150 = NFW_profile(np.array([0.15]), rho_s, r_s)\n",
+    "                rho150 = np.append(rho150, _rho_150[0])\n",
+    "            \n",
+    "            # Fit\n",
+    "            _q, _m = run_best_fit_for_sim(rp, rho150)\n",
+    "            q = np.append(q, _q)\n",
+    "            m = np.append(m, _m)\n",
+    "\n",
+    "    \n",
+    "    bootstrap_sample_sim = np.random.choice(m, size=num_samples, replace=True)\n",
+    "    print(np.median(m),np.percentile(m,16),np.percentile(m,84))\n",
+    "\n",
+    "    num_sim = len(m)\n",
+    "    mu, sigma = -0.6, 0.4 # mean and standard deviation\n",
+    "    m_obs_MW = np.random.normal(mu, sigma, num_sim)\n",
+    "    bootstrap_sample_obs_MW = np.random.choice(m_obs_MW, size=num_samples, replace=True)\n",
+    "  \n",
+    "    mu, sigma = -0.1, 0.5 # mean and standard deviation\n",
+    "    m_obs_LMC = np.random.normal(mu, sigma, num_sim)\n",
+    "    bootstrap_sample_obs_LMC = np.random.choice(m_obs_LMC, size=num_samples, replace=True)\n",
+    "    \n",
+    "\n",
+    "    # Is there a significant difference between the simulated and observational slope distributions?\n",
+    "    # p_value = number of times bootstrap_slope_sim < bootstrap_slope_obs\n",
+    "    # pvalue here is the proportion of bootstrap samples from the simulations with a value lower\n",
+    "    # than or equal than the observational sample. \n",
+    "    \n",
+    "    p1 = np.sum(bootstrap_sample_sim > bootstrap_sample_obs_MW).astype('f') / num_samples\n",
+    "    p2 = np.sum(bootstrap_sample_sim < bootstrap_sample_obs_MW).astype('f') / num_samples\n",
+    "    print('Pvalue (MW-obs)', p1, p2, id_name)\n",
+    "    p1 = np.sum(bootstrap_sample_sim > bootstrap_sample_obs_LMC).astype('f') / num_samples\n",
+    "    p2 = np.sum(bootstrap_sample_sim < bootstrap_sample_obs_LMC).astype('f') / num_samples\n",
+    "    print('Pvalue (MW+LMC-obs)', p1, p2, id_name)\n",
+    "    print('====')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0dbd2ee9-a8f3-4ed3-8b76-a49e33899367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IDs = {\n",
+    "     \"SigmaConstant00\": \"CDM\",\n",
+    "#    \"SigmaConstant01\": \"SigmaConstant01\",\n",
+    "#    \"SigmaConstant10\": \"SigmaConstant10\", # I will not include this sim. since its cross section is already ruled out by galaxy clusters\n",
+    "#    \"SigmaVelDep20Anisotropic\": \"SigmaVel20\",\n",
+    "#    \"SigmaVelDep60Anisotropic\": \"SigmaVel60\", \n",
+    "    \"SigmaVelDep100Anisotropic\": \"SigmaVel100\",\n",
+    "}\n",
+    "\n",
+    "for i, (id, id_name) in enumerate(IDs.items()):\n",
+    "    file = h5py.File(DATA_PATH+f\"{id}.hdf5\", \"a\")\n",
+    "\n",
+    "    q = []\n",
+    "    m = []\n",
+    "    # Add simulations points\n",
+    "    for idx in file.keys():\n",
+    "\n",
+    "        if file[f'{idx}'].attrs.get(\"main_halo_of\") is not None:   \n",
+    "            subhalo_idxs = file[f'{idx}'].attrs.get(\"main_halo_of\")\n",
+    "\n",
+    "            rp, rho150, M200 = [], [], []\n",
+    "            # Get satellites of MW halo\n",
+    "            for subhalo_idx in subhalo_idxs[:8]:\n",
+    "                data_subhalo = file[f'{subhalo_idx}']\n",
+    "\n",
+    "                # Get pericenter\n",
+    "                _rp = data_subhalo[\"tree_data\"][\"pericenter\"][1]\n",
+    "                _rp = _rp[0] if _rp.shape==(1,) else _rp\n",
+    "                rp = np.append(rp, _rp)\n",
+    "\n",
+    "                nfw_fit = data_subhalo['halo_data']['nfw_fit']\n",
+    "                r_s, log10_rho_s, sigma_r_s, sigma_log10_rho_s = nfw_fit\n",
+    "                rho_s = 10**log10_rho_s\n",
+    "                _rho_150 = NFW_profile(np.array([0.15]), rho_s, r_s)\n",
+    "                rho150 = np.append(rho150, _rho_150[0])\n",
+    "            \n",
+    "            # Fit\n",
+    "            _q, _m = run_best_fit_for_sim(rp, rho150)\n",
+    "            q = np.append(q, _q)\n",
+    "            m = np.append(m, _m)\n",
+    "\n",
+    "    select1 = np.where(m <= -0.4)[0]\n",
+    "    select2 = np.where(m <= -0.5)[0]\n",
+    "    select3 = np.where(m <= -0.6)[0]\n",
+    "    print(id_name)\n",
+    "    print(len(select1)/len(m),len(select2)/len(m),len(select3)/len(m))\n",
+    "    print(np.median(m),np.percentile(m,16),np.percentile(m,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3b3ee34-1bb0-4cda-a264-7640a2b9c941",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aeed7774-159f-4a37-a714-be82d3de3d39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "ca724a92-f726-4354-997b-dd48b95cb2d1",
    "metadata": {},
