--- a/examples/15 - density_halo_mass.ipynb
+++ b/examples/15 - density_halo_mass.ipynb
@@ -131,6 +131,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "1d9e1c61-1731-4ced-86b6-c250cfa9aabf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = \"Read_2019.csv\" # This is a list of satellites without CVnI\n",
+    "data = pd.read_csv(GAIA_PATH + filename).to_numpy()\n",
+    "M200_R19 = np.zeros((3,num_satellites))\n",
+    "\n",
+    "for i in range(num_satellites):\n",
+    "    M200_R19[0,i] = data[i,1]\n",
+    "    M200_R19[1,i] = data[i,2]\n",
+    "    M200_R19[2,i] = data[i,3]\n",
+    "\n",
+    "filename = \"Hayashi_2019.csv\" # This is a list of satellites without CVnI\n",
+    "data = pd.read_csv(GAIA_PATH + filename).to_numpy()\n",
+    "MsM200_H19 = np.zeros((3,8))\n",
+    "rho150pc_H19 = np.zeros((3,8))\n",
+    "for i in range(8):\n",
+    "    MsM200_H19[0,i] = data[i,1]\n",
+    "    MsM200_H19[1,i] = data[i,3]\n",
+    "    MsM200_H19[2,i] = data[i,2]\n",
+    "    # rho150pc_H19[0,i] =  10**data[i,4]\n",
+    "    # rho150pc_H19[2,i] =  10**(data[i,4]-data[i,5])\n",
+    "    # rho150pc_H19[1,i] =  10**(data[i,4]+data[i,6])\n",
+    "    rho150pc_H19[0,i] =  10**data[i,4]\n",
+    "    rho150pc_H19[2,i] =  10**(data[i,4])*data[i,5]\n",
+    "    rho150pc_H19[1,i] =  10**(data[i,4])*data[i,6]\n",
+    "\n",
+    "\n",
+    "filename = \"McConnachie_2012.csv\" # This is a list of satellites without CVnI\n",
+    "data = pd.read_csv(GAIA_PATH + filename).to_numpy()\n",
+    "Ms = np.zeros(8)\n",
+    "for i in range(8):Ms[i] = data[i,1] * 1e6\n",
+    "\n",
+    "M200_H19 = Ms / MsM200_H19\n",
+    "M200_H19[1,:] = M200_H19[0,:]-M200_H19[1,:]\n",
+    "M200_H19[2,:] = M200_H19[2,:]-M200_H19[0,:]\n",
+    "\n",
+    "# rho150pc_H19[1,:] =  rho150pc_H19[1,:]-rho150pc_H19[0,:]\n",
+    "# rho150pc_H19[2,:] =  rho150pc_H19[0,:]-rho150pc_H19[2,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03908749-7bed-4e09-957a-087349fc86c9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "id": "bc169315-ab61-45c1-b308-9831a0976a1b",
    "metadata": {},
@@ -160,7 +213,13 @@
     "    file = h5py.File(DATA_PATH+f\"{id}.hdf5\", \"a\")\n",
     "\n",
     "    axs = plt.subplot(2, 1, i+1)\n",
-    "    axs.fill_between(np.array([1e7, 1e9]), np.array([2e6, 2e6]), np.array([2e9, 2e9]), color='grey', alpha=0.15)\n",
+    "    axs.fill_between(np.array([1e7, 1e9]), np.array([2e6, 2e6]), np.array([3e9, 3e9]), color='grey', alpha=0.15)\n",
+    "\n",
+    "    xrange = np.ones(2) * 14.28e9\n",
+    "    yrange = np.array([2e6, 3e9])\n",
+    "    plt.plot(xrange, yrange, '--',lw=2, color='lightgreen')\n",
+    "\n",
+    "    axs.fill_between(np.array([14.28e9, 1e11]), np.array([2e6, 2e6]), np.array([3e9, 3e9]), color='lightgreen', alpha=0.15)\n",
     "\n",
     "    # Add simulations points\n",
     "    rp, rho150, M200 = [], [], []\n",
@@ -170,7 +229,7 @@
     "            subhalo_idxs = file[f'{idx}'].attrs.get(\"main_halo_of\")\n",
     "\n",
     "            # Get satellites of MW halo\n",
-    "            for subhalo_idx in subhalo_idxs[:10]:\n",
+    "            for subhalo_idx in subhalo_idxs[:8]:\n",
     "                data_subhalo = file[f'{subhalo_idx}']\n",
     "\n",
     "                nfw_fit = data_subhalo['halo_data']['nfw_fit']\n",
@@ -178,14 +237,11 @@
     "                rho_s = 10**log10_rho_s\n",
     "                _rho_150 = NFW_profile(np.array([0.15]), rho_s, r_s)\n",
     "                rho150 = np.append(rho150, _rho_150[0])\n",
-    "    \n",
-    "                sigma_rho_s = sigma_log10_rho_s * np.log(10) * rho_s\n",
-    "                rho = NFW_profile(r_range, rho_s, r_s)\n",
-    "                mass_within_r = mass(rho, r_range)\n",
-    "                rho_within_r = rho_mean(mass_within_r, r_range)\n",
-    "                R200 = calculate_R200(rho_within_r, r_range)\n",
-    "                _M200 = calculate_M200(R200)\n",
-    "                M200 = np.append(M200, _M200)\n",
+    "\n",
+    "                z_accr_type_idx, accretion = data_subhalo['tree_data']['accretion']\n",
+    "                mass_peak = data_subhalo['tree_data']['bound_mass_dm'][int(z_accr_type_idx)]\n",
+    "                \n",
+    "                M200 = np.append(M200, mass_peak)\n",
     "\n",
     "    axs.plot(M200, rho150, 'o', ms=5, color='grey', markeredgecolor='none', alpha=0.5)\n",
     "    m_bins = np.arange(9, 11.2, 0.2)\n",
@@ -193,26 +249,65 @@
     "    select = np.where(M200>=1e9)[0]\n",
     "    plot_median_relation(axs, m_bins, M200[select], rho150[select], color='black')\n",
     "\n",
-    "    axs.errorbar(M200_K19[0,:-1], rho_150pc_K19[0,:], yerr=rho_150pc_K19[1:,:], xerr=M200_K19[1:,:-1],\n",
-    "                 marker='o', markersize=5.5, markeredgecolor=\"white\", ls='none', lw=1.5, c='darkblue',label='K19', zorder=1000)\n",
+    "    axs.errorbar(M200_R19[0,:], rho_150pc_K19[0,:], yerr=rho_150pc_K19[1:,:], xerr=M200_R19[1:,:],\n",
+    "                 marker='o', markersize=5.5, markeredgecolor=\"white\", ls='none', lw=1.5, c='darkblue',\n",
+    "                 label='Read et al. (2019)', zorder=1000)\n",
+    "\n",
+    "    axs.errorbar(M200_H19[0,:], rho150pc_H19[0,:], yerr=rho150pc_H19[1:,:], xerr=M200_H19[1:,:],\n",
+    "             marker='v', markersize=7, markeredgecolor=\"white\", ls='none', lw=1.5, c='tab:orange',\n",
+    "             label='Hayashi et al. (2019)', zorder=1000)\n",
+    "\n",
+    "    # M200_And = np.zeros(3)\n",
+    "    # M200_And[0] = 2.8e9\n",
+    "    # M200_And[1] = 2.8e9-1.5e9\n",
+    "    # M200_And[2] = 4e9-2.8e9\n",
+    "\n",
+    "    # rho_150pc_And = np.zeros(3)\n",
+    "    # rho_150pc_And[0] = 0.25e8\n",
+    "    # rho_150pc_And[1] = 0.25e8-0.15e8\n",
+    "    # rho_150pc_And[2] = 0.3e8-0.25e8\n",
+    "    \n",
+    "    # axs.errorbar(M200_And[0], rho_150pc_And[0], yerr=[[rho_150pc_And[1]],[rho_150pc_And[2]]], \n",
+    "    #              xerr=[[M200_And[1]],[M200_And[2]]],\n",
+    "    #              marker='*', markersize=10, markeredgecolor=\"white\", ls='none', lw=1.5, c='pink',\n",
+    "    #              label='Collins et al. (2021)', zorder=1000)\n",
+    "\n",
+    "    # M200_And[0] = 1.1e9\n",
+    "    # M200_And[1] = 1.1e9-6e8\n",
+    "    # M200_And[2] = 1.7e9-1.1e9\n",
+    "\n",
+    "    # rho_150pc_And[0] = 0.3e8\n",
+    "    # rho_150pc_And[1] = 0.3e8-0.1e8\n",
+    "    # rho_150pc_And[2] = 0.45e8-0.3e8\n",
+    "    \n",
+    "    # axs.errorbar(M200_And[0], rho_150pc_And[0], yerr=[[rho_150pc_And[1]],[rho_150pc_And[2]]], \n",
+    "    #              xerr=[[M200_And[1]],[M200_And[2]]],\n",
+    "    #              marker='>', markersize=8, markeredgecolor=\"white\", ls='none', lw=1.5, c='purple',\n",
+    "    #              label='Charles et al. (2022)', zorder=1000)\n",
+    "\n",
     "    \n",
     "    props = dict(boxstyle='round', fc='white', ec='black', alpha=1)\n",
-    "    axs.text(0.05, 0.15, id_name, transform=axs.transAxes, fontsize=16, verticalalignment='top', bbox=props, zorder=1000)\n",
-    "        \n",
-    "    plt.axis([1e7, 1e11, 2e6, 2e9])\n",
+    "    axs.text(0.05, 0.92, id_name, transform=axs.transAxes, fontsize=16, verticalalignment='top', bbox=props, zorder=1000)\n",
+    "\n",
+    "    plt.axis([1e8, 1e11, 1e7, 3e9])\n",
     "    plt.xscale('log')\n",
     "    plt.yscale('log')\n",
     "    plt.ylabel(r\"$\\rho_{150\\mathrm{pc}}$ [M$_{\\odot}$ kpc$^{-3}$]\")\n",
+    "\n",
+    "    if i == 0:\n",
+    "        plt.legend(loc=[0.35,0.78],labelspacing=0.1, handlelength=0.3, handletextpad=0.5, \n",
+    "                   frameon=False, fontsize=14, ncol=1, columnspacing=1, numpoints=1)\n",
+    "\n",
     "    \n",
     "    if i == 0:\n",
     "        plt.xticks([])\n",
     "    else:\n",
-    "        plt.xlabel(r\"$M_{200}$ [M$_{\\odot}$]\")\n",
+    "        plt.xlabel(r\"$M_{\\mathrm{peak}}$ [M$_{\\odot}$]\")\n",
     "\n",
     "    ####\n",
     "    file.close()\n",
     "\n",
-    "plt.savefig('Density_M200.png',dpi=300)\n",
+    "plt.savefig('Density_Mpeak.png',dpi=300)\n",
     "plt.show()"
    ]
   },
@@ -222,12 +317,152 @@
    "id": "1f36bccc-39b4-4bc1-8f4f-8a386b481a42",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "DATA_PATH = \"../data/TangoSIDM/\"\n",
+    "\n",
+    "IDs = {\n",
+    "    \"SigmaConstant00\": \"CDM\",\n",
+    "    \"SigmaVelDep100Anisotropic\": \"SigmaVel100\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "obs_data_mass = np.log10(M200_R19[0,:])\n",
+    "obs_data_rho = np.log10(rho_150pc_K19[0,:])\n",
+    "spearman_obs0 = stats.spearmanr(obs_data_mass, obs_data_rho)\n",
+    "\n",
+    "select = np.where(M200_R19[0,:]<1e10)[0] # Removing Fornax ...\n",
+    "obs_data_mass = np.log10(M200_R19[0,select])\n",
+    "obs_data_rho = np.log10(rho_150pc_K19[0,select])\n",
+    "spearman_obs1 = stats.spearmanr(obs_data_mass, obs_data_rho)\n",
+    "\n",
+    "select = np.where(M200_H19[0,:] > 1e9)[0]\n",
+    "obs_data_mass = np.append(obs_data_mass, np.log10(M200_H19[0,select]))\n",
+    "obs_data_rho = np.append(obs_data_rho, np.log10(rho150pc_H19[0,select]))\n",
+    "spearman_obs2 = stats.spearmanr(obs_data_mass, obs_data_rho)\n",
+    "\n",
+    "print('Obs (only Read + Fornax)',spearman_obs0)\n",
+    "print('Obs (only Read)',spearman_obs1)\n",
+    "print('Obs (Read+Hayashi)',spearman_obs2)\n",
+    "\n",
+    "spearman_cdm = []\n",
+    "spearman_sidm = []\n",
+    "\n",
+    "spearman_cdm_samplecut = []\n",
+    "spearman_sidm_samplecut = []\n",
+    "\n",
+    "for i, (id, id_name) in enumerate(IDs.items()):\n",
+    "    file = h5py.File(DATA_PATH+f\"{id}.hdf5\", \"a\")\n",
+    "\n",
+    "    rp, rho150, M200 = [], [], []\n",
+    "    # Add simulations points\n",
+    "    for idx in file.keys():\n",
+    "\n",
+    "        if file[f'{idx}'].attrs.get(\"main_halo_of\") is not None:   \n",
+    "            subhalo_idxs = file[f'{idx}'].attrs.get(\"main_halo_of\")\n",
+    "\n",
+    "            # Get satellites of MW halo\n",
+    "            #rp, rho150, M200 = [], [], []\n",
+    "            for subhalo_idx in subhalo_idxs[:8]:\n",
+    "                data_subhalo = file[f'{subhalo_idx}']\n",
+    "\n",
+    "                nfw_fit = data_subhalo['halo_data']['nfw_fit']\n",
+    "                r_s, log10_rho_s, sigma_r_s, sigma_log10_rho_s = nfw_fit\n",
+    "                rho_s = 10**log10_rho_s\n",
+    "                _rho_150 = NFW_profile(np.array([0.15]), rho_s, r_s)\n",
+    "                rho150 = np.append(rho150, _rho_150[0])\n",
+    "\n",
+    "                z_accr_type_idx, accretion = data_subhalo['tree_data']['accretion']\n",
+    "                mass_peak = data_subhalo['tree_data']['bound_mass_dm'][int(z_accr_type_idx)]\n",
+    "                M200 = np.append(M200, mass_peak)\n",
+    "        else: continue\n",
+    "\n",
+    "        sim_data_mass = np.log10(M200)\n",
+    "        sim_data_rho = np.log10(rho150)\n",
+    "    \n",
+    "        if i == 0:\n",
+    "            _spearman_cdm = stats.spearmanr(sim_data_mass, sim_data_rho)\n",
+    "            spearman_cdm = np.append(spearman_cdm,_spearman_cdm[0])\n",
+    "            print(id_name,'MW',idx,_spearman_cdm)\n",
+    "        if i == 1:\n",
+    "            _spearman_sidm = stats.spearmanr(sim_data_mass, sim_data_rho)\n",
+    "            spearman_sidm = np.append(spearman_sidm,_spearman_sidm[0])\n",
+    "            print(id_name,'MW',idx,_spearman_sidm)\n",
+    "\n",
+    "    \n",
+    "        select = np.where((M200<=1.5e10) & (M200>=1e9))[0]\n",
+    "        sim_data_mass = np.log10(M200[select])\n",
+    "        sim_data_rho = np.log10(rho150[select])\n",
+    "    \n",
+    "        if i == 0:\n",
+    "            _spearman_cdm = stats.spearmanr(sim_data_mass, sim_data_rho)\n",
+    "            spearman_cdm_samplecut = np.append(spearman_cdm_samplecut,_spearman_cdm[0])\n",
+    "            print(id_name,'MW',idx,_spearman_cdm)\n",
+    "        if i == 1:\n",
+    "            _spearman_sidm = stats.spearmanr(sim_data_mass, sim_data_rho)\n",
+    "            spearman_sidm_samplecut = np.append(spearman_sidm_samplecut,_spearman_sidm[0])\n",
+    "            print(id_name,'MW',idx,_spearman_sidm)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "dd51013c-cf22-4232-8432-47f80b0b7ff9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fraction = np.where(spearman_sidm > 0.3)[0]\n",
+    "med = np.median(spearman_sidm)\n",
+    "err1 = med - np.percentile(spearman_sidm,16)\n",
+    "err2 = np.percentile(spearman_sidm,84) - med\n",
+    "print('sidm',len(fraction)/len(spearman_sidm),med,err1,err2)\n",
+    "\n",
+    "fraction = np.where(spearman_sidm_samplecut > 0.3)[0]\n",
+    "med = np.median(spearman_sidm_samplecut)\n",
+    "err1 = med - np.percentile(spearman_sidm_samplecut,16)\n",
+    "err2 = np.percentile(spearman_sidm_samplecut,84) - med\n",
+    "print('sidm (sample cut)',len(fraction)/len(spearman_sidm_samplecut),med,err1,err2)\n",
+    "\n",
+    "fraction = np.where(spearman_cdm > 0.3)[0]\n",
+    "med = np.median(spearman_cdm)\n",
+    "err1 = med - np.percentile(spearman_cdm,16)\n",
+    "err2 = np.percentile(spearman_cdm,84) - med\n",
+    "print('cdm',len(fraction)/len(spearman_cdm),med,err1,err2)\n",
+    "fraction = np.where(spearman_cdm > 0.5)[0]\n",
+    "med = np.median(spearman_cdm)\n",
+    "err1 = med - np.percentile(spearman_cdm,16)\n",
+    "err2 = np.percentile(spearman_cdm,84) - med\n",
+    "print('cdm',len(fraction)/len(spearman_cdm),med,err1,err2)\n",
+    "\n",
+    "fraction = np.where(spearman_cdm_samplecut > 0.3)[0]\n",
+    "med = np.median(spearman_cdm_samplecut)\n",
+    "err1 = med - np.percentile(spearman_cdm_samplecut,16)\n",
+    "err2 = np.percentile(spearman_cdm_samplecut,84) - med\n",
+    "print('cdm (sample cut)',len(fraction)/len(spearman_cdm_samplecut),med,err1,err2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca9a39c-8001-42e0-ba62-ca283e2dba36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 5))\n",
+    "bins = np.arange(-1,1,0.05)\n",
+    "ax.hist(spearman_sidm,bins=bins,color='tab:blue',label='sidm')\n",
+    "ax.hist(spearman_sidm_samplecut,bins=bins,color='tab:blue',alpha=0.5,label='sidm (sample cut)')\n",
+    "ax.hist(spearman_cdm,bins=bins,color='tab:orange',label='cdm')\n",
+    "ax.hist(spearman_cdm_samplecut,bins=bins,color='tab:orange',alpha=0.5,label='cdm (sample cut)')\n",
+    "plt.ylabel('Histogram')\n",
+    "plt.xlabel('Statistic (Spearman correlation coefficient)')\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c81f39a6-806d-4f8e-8b06-d00adf6af91a",
    "metadata": {},
    "outputs": [],
    "source": []
